# galaxy_sim

./: .gitignore  .gitmodules  README.md  install_gadget4.sh  pyproject.toml  requirements.txt
configs/: gadget4_Config.sh  galaxy.param
galaxy_sim/: run.py
galaxy_sim/cache/: __init__.py  reader.py
galaxy_sim/ic/: __init__.py  galaxy.hdf5  ic_gen.py  ic_writer.py  tipsy_writer.py
galaxy_sim/sim/: __init__.py  bonsai_runner.py  params.py  runner.py  snap_convert.py
galaxy_sim/viz/: __init__.py  convert_snapshots.py  fix_corrupt.py  visualise.py
ic/: galaxy.hdf5
