[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy_sim"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "h5py>=3.8",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
viz = ["vispy>=0.14", "PyOpenGL>=3.1", "glfw>=2.5"]
# Note: MP4 export requires the system package 'ffmpeg' (not pip-installable).
# Install with: sudo apt-get install ffmpeg

[project.scripts]
galaxy-run = "galaxy_sim.run:main"
galaxy-viz = "galaxy_sim.viz.visualise:_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["galaxy_sim*"]
